--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,8 @@
 # in the templates via {{ site.myvariable }}.
 title: Linek Plumbing Company
 email: contact@linekplumbing.com
+phone: 314-962-0956
+address: 24 Kirkham Industrial Ct. Webster Groves, MO 63119
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
