--- a/_config.yml
+++ b/_config.yml
@@ -18,9 +18,7 @@ email: contact@linekplumbing.com
 phone: 314-962-0956
 address: 24 Kirkham Industrial Ct. Webster Groves, MO 63119
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Linek Plumbing provides quality plumbing services for both commercial and residential projects across the St. Louis area. Since 1916.
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "http://linekplumbing.com" # the base hostname & protocol for your site
 
